K8S/file-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: file-depl
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: fileservice
  template:
    metadata:
      labels:
        app: fileservice
    spec:
      containers:
        - name: fileservice
          image: 2257922579/fileservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: file-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: fileservice
  ports:
  - name: fileservice
    port: 80
    targetPort: 80
