K8S/filesort-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: filesortnpservice-srv
spec:
  type: NodePort
  selector:
    app: filesortservice
  ports:
    - name: filesortservice
      protocol: TCP
      port: 80
      targetPort: 80
